# magnolia-lang

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  command.py  hie.yaml  magnolia.cabal  magnoliac.cabal
.github/workflows/: ci.yml
design-challenges-drafts/: circular_requirement.cpp  function_operators_with_overload_on_return_type.cpp
docs/design/codegen/: README.md  overloading_on_return_type.cpp  signature_impl_satisfaction_abstract.cpp  signature_impl_satisfaction_concept.cpp  simple_impl_and_program.cpp
examples/bgl/: Makefile  bench_bfs.sh  test.in
examples/bgl/cpp-src/: base.hpp  bellman_ford_test.hpp  bfs_custom_test.hpp  bfs_parallel_test.hpp  bfs_test.hpp  bgl_test.hpp  dfs_test.hpp  dijkstra_test.hpp  distributed_base.hpp  johnson_test.hpp  main.cpp  prim_test.hpp  testcase.cpp  testcase.hpp
examples/bgl/mg-src/: BasicConcepts.mg  Dijkstra.mg  ExternalDataStructures.mg  GraphConcepts.mg  bellman_ford_utils.mg  bfs.mg  bfs_utils.mg  bgl-cpp.mg  bgl-py.mg  bgl.mg  bool.mg  color_marker.mg  dfs_utils.mg  dijkstra_utils.mg  for_loop.mg  graph.mg  johnson_utils.mg  list.mg  prim_utils.mg  property_map.mg  queue.mg  relax.mg  stack.mg  tuple.mg  unit.mg  vector.mg  while_loop.mg
examples/bgl/py-src/: base.py  bellman_ford_test.py  bfs_test.py  dfs_test.py  dijkstra_test.py  johnson_test.py  multiple_dispatch.py  prim_test.py  test.py
examples/bgl_v2/: Makefile
examples/bgl_v2/cpp-src/: base.hpp  bfs_parallel_test.hpp  bfs_test.hpp  bgl_test.hpp  dfs_test.hpp  dijkstra_test.hpp  distributed_base.hpp  main.cpp  testcase.cpp  testcase.hpp
examples/bgl_v2/mg-src/: bfs.mg  bfs_test.mg  bfs_utils.mg  bgl_v2-cpp.mg  bgl_v2-py.mg  bgl_v2.mg  color_marker.mg  dfs_utils.mg  dijkstra.mg  dijkstra_utils.mg  for_loop.mg  graph.mg  list.mg  property_map.mg  queue.mg  relax.mg  stack.mg  tuple.mg  vector.mg  while_loop.mg
examples/bgl_v2/py-src/: base.py  bfs_test.py  dfs_test.py  dijkstra_test.py  test.py
examples/containers/cpp-src/: base.hpp  main.cpp
examples/containers/mg-src/: containers.mg
examples/fizzbuzz/: Makefile
examples/fizzbuzz/cpp-src/: base.hpp  main.cpp
examples/fizzbuzz/cuda-src/: base.cuh  main.cu
examples/fizzbuzz/mg-src/: fizzbuzz-cpp.mg  fizzbuzz-cuda.mg  fizzbuzz.mg
examples/mmult-while/: Makefile
examples/mmult-while/cpp-src/: base.hpp  main.cpp
examples/mmult-while/mg-src/: mmult-while-cpp.mg
examples/mmult/cpp-src/: base.hpp  main.cpp
examples/mmult/mg-src/: mmult.mg
examples/moa/cpp-src/: base.hpp  main.cpp  while_gen.py
examples/moa/mg-src/: MOA.mg  Util.mg  array-ops.mg  fdm.mg  inner-product.mg  moa-core-concepts.mg  moa-core-impl.mg  moa-core.mg  moa-cpp.mg  moa-wip-api.mg  moa.mg  num-ops.mg  while-loops.mg
examples/moa/mg_src/: MOA.mg  Util.mg
examples/moa/testing/: Makefile
examples/moa/tex/: FDM_PDE.tex  MoA_Core_API.tex  MoA_core.tex
examples/pde/: Makefile  bench.sh
examples/pde/cpp-src/: base.hpp  main.cpp
examples/pde/cuda-src/: base.cuh  main.cu
examples/pde/mg-src/: array-api.mg  pde-cpp.mg  pde-cuda.mg  pde-pad.mg
examples/while_loop/cpp-src/: base.hpp  main.cpp
examples/while_loop/mg-src/: while_loop-cpp.mg  while_loop-py.mg  while_loop.mg
examples/while_loop/py-src/: multiple_dispatch.py  test.py  (+2 more)
src/: magnolia.hs  magnoliac.hs
src/lib/: Backend.hs  Check.hs  Compiler.hs  Env.hs  Err.hs  Make.hs  MgToCuda.hs  MgToCxx.hs  MgToPython.hs  MgToUtil.hs  MgToXml.hs  Monad.hs  PPrint.hs  Parser.hs  Syntax.hs  Util.hs
tests/: testGuidelines.md
tests/frontend/: test.mg  test_frontend.py
tests/inputs/: declScopeTests.mg  externalTests.mg  externals.mg  modeCheck.mg  modeTests.mg  package-name-with-hyphens.mg  packageTests.mg  regressionTests.mg  renamingTests.mg  requirementTests.mg  stateHandlingTests.mg  stmtErrors.mg  stmtTests.mg
tests/outputs/: declScopeTests.mg.out  externalTests.mg.out  externals.mg.out  modeCheck.mg.out  modeTests.mg.out  packageTests.mg.out  parsing-recovery.mg.out  parsingTests.mg.out  renamingTests.mg.out  requirementTests.mg.out  stateHandlingTests.mg.out  stmtErrors.mg.out  stmtTests.mg.out
(+69 files in other folders)
