name:                magnolia
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
author:              Benjamin Chetioui
license:             BSD3
license-file:        LICENSE
maintainer:          benjamin.chetioui@uib.no
category:            Language
homepage:            https://github.com/magnolia-lang/magnolia-lang/
bug-reports:         https://github.com/magnolia-lang/magnolia-lang/issues
tested-with:         GHC == 8.10.3
description:
  Magnolia is a research programming language based on the theory of institutions.

extra-source-files:
  README.md

source-repository head
  type:     git
  location: git://github.com/magnolia-lang/magnolia-lang.git

library
  default-language: Haskell2010
  hs-source-dirs: src/lib
  build-depends:  base
                , containers
                , megaparsec >=8.0
                , mtl
                , parser-combinators >= 1.3.0
                , prettyprinter >= 1.7.0
                , text >= 1.2.4
                , transformers

  ghc-options:  -Wall
  exposed-modules: 
    Check
    Env
    Make
    Parser
    PPrint
    Syntax
    Util

executable magnolia
  default-language:    Haskell2010
  main-is:             magnolia.hs
  hs-source-dirs:      src
  include-dirs:        src/lib
  
  build-depends:  base
                , containers
                , haskeline
                , magnolia
                , megaparsec >=8.0
                , mtl
                , optparse-applicative
                , parser-combinators >= 1.3.0
                , prettyprinter >= 1.7.0
                , text >= 1.2.4
                , transformers
  ghc-options:  -Wall