name:                magnolia
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
author:              Benjamin Chetioui
license:             BSD3
license-file:        LICENSE
maintainer:          benjamin.chetioui@uib.no
category:            Language
homepage:            https://github.com/magnolia-lang/magnolia-lang/
bug-reports:         https://github.com/magnolia-lang/magnolia-lang/issues
tested-with:         GHC == 8.10.3
description:
  Magnolia is a research programming language based on the theory of institutions.

extra-source-files:
  README.md

source-repository head
  type:     git
  location: git://github.com/magnolia-lang/magnolia-lang.git

library
  default-language: Haskell2010
  hs-source-dirs: src/lib
  build-depends:  base                 >= 4.12 && < 4.15
                , containers           >= 0.5  && < 0.7
                , megaparsec           >= 8.0  && < 9.1
                , mtl                  >= 2.1  && < 2.3
                , parser-combinators   >= 1.0  && < 2.0
                , prettyprinter        >= 1.6  && < 1.8
                , text                 >= 1.1  && < 1.3
                , transformers         >= 0.4  && < 0.6

  ghc-options:  -Wall
  exposed-modules:  Cxx.Syntax
                  , Env
                  , Magnolia.Check
                  , Magnolia.Parser
                  , Magnolia.PPrint
                  , Magnolia.Syntax
                  , Magnolia.Util
                  , Make
                  , MgToCxx

executable magnolia
  default-language:    Haskell2010
  main-is:             magnolia.hs
  hs-source-dirs:      src
  include-dirs:        src/lib

  build-depends:  base                  >= 4.12  && < 4.15
                , containers            >= 0.5   && < 0.7
                , haskeline             >= 0.7   && < 0.9
                , magnolia              >= 0.0   && < 1.0
                , megaparsec            >= 8.0   && < 9.1
                , mtl                   >= 2.1   && < 2.3
                , optparse-applicative  >= 0.15  && < 0.20
                , parser-combinators    >= 1.0   && < 2.0
                , prettyprinter         >= 1.6   && < 1.8
                , text                  >= 1.1   && < 1.3
                , transformers          >= 0.4   && < 0.6
